--- a/android-app/app/src/main/res/layout/activity_popup_correct.xml
+++ b/android-app/app/src/main/res/layout/activity_popup_correct.xml
@@ -27,7 +27,7 @@
                 android:scaleType="centerCrop"
                 android:background="@color/colorTransparent"
                 app:srcCompat="@drawable/arrow_back"
-                android:id="@+id/imageButton"></ImageButton>
+                android:id="@+id/imageButton"/>
         </LinearLayout>
 
         <LinearLayout
@@ -44,7 +44,7 @@
                 android:gravity="center"
                 android:textSize="30dp"
                 android:textColor="@color/colorWhite"
-                android:id="@+id/textView2" />
+                android:id="@+id/textView2"/>
 
             <TextView
                 android:text="@string/guess_correct_points"
@@ -54,7 +54,7 @@
                 android:gravity="center"
                 android:textSize="30dp"
                 android:textColor="@color/colorWhite"
-                android:id="@+id/textView3" />
+                android:id="@+id/textView3"/>
         </LinearLayout>
 
     </LinearLayout>
