--- a/android-app/app/src/main/res/layout/activity_change_password.xml
+++ b/android-app/app/src/main/res/layout/activity_change_password.xml
@@ -20,11 +20,11 @@
         android:layout_margin="5dp">
 
         <TextView
-            android:text="Account registration"
+            android:text="Change password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20dp"
-            android:id="@+id/textViewReg"
+            android:id="@+id/textViewChangePassword"
             android:textColor="@color/colorBlack"/>
     </LinearLayout>
 
@@ -35,41 +35,11 @@
         android:layout_margin="5dp">
 
         <TextView
-            android:text="@string/registration_info"
+            android:text="To change your password, please fill in a new password in the boxes below."
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/textViewChangePasswordInfo"
             android:textColor="@color/colorBlack"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp">
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:hint="Username"
-            android:ems="10"
-            android:id="@+id/textFieldName" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp">
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textEmailAddress"
-            android:ems="10"
-            android:id="@+id/textFieldEmail"
-            android:hint="Email address" />
     </LinearLayout>
 
     <LinearLayout
@@ -102,21 +72,6 @@
             android:hint="Confirm password" />
     </LinearLayout>
 
-    <!-- For enabling a terms and conditions warning
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:text="@string/registration_warning"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-    </LinearLayout>
-
-    -->
-
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -124,25 +79,10 @@
         android:layout_margin="5dp">
 
         <Button
-            android:text="Register"
+            android:text="Next"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/buttonRegister"
-            android:onClick="register"/>
+            android:id="@+id/buttonNext"
+            android:onClick="next"/>
     </LinearLayout>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp">
-
-        <TextView
-            android:text="Already have an account?"
-            android:textColor="@color/colorBlue"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textViewtoLogin"/>
-    </LinearLayout>
-
 </LinearLayout>
