--- a/android-app/app/src/main/res/layout/activity_forgot_password.xml
+++ b/android-app/app/src/main/res/layout/activity_forgot_password.xml
@@ -20,11 +20,11 @@
         android:layout_margin="5dp">
 
         <TextView
-            android:text="Account registration"
+            android:text="Retrieving lost password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20dp"
-            android:id="@+id/textViewReg"
+            android:id="@+id/textViewRetrievePassword"
             android:textColor="@color/colorBlack"/>
     </LinearLayout>
 
@@ -35,10 +35,10 @@
         android:layout_margin="5dp">
 
         <TextView
-            android:text="@string/registration_info"
+            android:text="@string/code_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/textViewChangePasswordInfo"
+            android:id="@+id/textViewLogin"
             android:textColor="@color/colorBlack"/>
     </LinearLayout>
 
@@ -52,70 +52,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
-            android:hint="Username"
+            android:hint="Fill in code"
             android:ems="10"
-            android:id="@+id/textFieldName" />
+            android:id="@+id/textFieldCode" />
     </LinearLayout>
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp">
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textEmailAddress"
-            android:ems="10"
-            android:id="@+id/textFieldEmail"
-            android:hint="Email address" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp">
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:ems="10"
-            android:id="@+id/textFieldPassword"
-            android:hint="Password" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp">
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:ems="10"
-            android:id="@+id/textFieldPassword2"
-            android:hint="Confirm password" />
-    </LinearLayout>
-
-    <!-- For enabling a terms and conditions warning
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:text="@string/registration_warning"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-    </LinearLayout>
-
-    -->
 
     <LinearLayout
         android:orientation="vertical"
@@ -124,11 +65,11 @@
         android:layout_margin="5dp">
 
         <Button
-            android:text="Register"
+            android:text="Next"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/buttonRegister"
-            android:onClick="register"/>
+            android:id="@+id/buttonNext"
+            android:onClick="next"/>
     </LinearLayout>
 
     <LinearLayout
@@ -138,11 +79,10 @@
         android:layout_margin="5dp">
 
         <TextView
-            android:text="Already have an account?"
+            android:text="Did not receive a code?"
             android:textColor="@color/colorBlue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textViewtoLogin"/>
+            android:id="@+id/textViewResendCode"/>
     </LinearLayout>
-
 </LinearLayout>
