--- a/android-app/app/src/main/res/layout/activity_login.xml
+++ b/android-app/app/src/main/res/layout/activity_login.xml
@@ -16,7 +16,8 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp">
 
         <TextView
             android:text="Account login"
@@ -30,7 +31,8 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp">
 
         <EditText
             android:layout_width="match_parent"
@@ -44,7 +46,8 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp">
 
         <EditText
             android:layout_width="match_parent"
@@ -52,14 +55,15 @@
             android:inputType="textPassword"
             android:ems="10"
             android:id="@+id/textFieldPasswordLogin"
-            android:hint="password" />
+            android:hint="Password" />
     </LinearLayout>
 
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp">
 
         <Button
             android:text="Login"
@@ -72,8 +76,8 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp">
 
         <TextView
             android:text="Forgot password?"
