--- a/android-app/app/src/main/res/layout/activity_load.xml
+++ b/android-app/app/src/main/res/layout/activity_load.xml
@@ -41,5 +41,11 @@
             android:layout_height="wrap_content"
             android:id="@+id/textView"
             android:layout_gravity="center"/>
+
+        <ProgressBar
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/progressBar" />
     </LinearLayout>
 </LinearLayout>
