--- a/android-app/app/src/main/res/layout/activity_forgot_password.xml
+++ b/android-app/app/src/main/res/layout/activity_forgot_password.xml
@@ -54,7 +54,7 @@
             android:inputType="textPersonName"
             android:hint="Fill in code"
             android:ems="10"
-            android:id="@+id/textFieldCode" />
+            android:id="@+id/editTextCode" />
     </LinearLayout>
 
 
