--- a/android-app/app/src/main/res/layout/activity_popup_password_changed.xml
+++ b/android-app/app/src/main/res/layout/activity_popup_password_changed.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/popupLayout"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -9,6 +10,7 @@
         android:layout_width="300dp"
         android:layout_height="400dp"
         android:background="@drawable/my_popup_bg"
+        android:id="@+id/popupBackground"
         android:weightSum="1">
 
         <LinearLayout
@@ -27,7 +29,7 @@
                 android:scaleType="centerCrop"
                 android:background="@color/colorTransparent"
                 app:srcCompat="@drawable/arrow_back"
-                android:id="@+id/imageButton"/>
+                android:id="@+id/imageButtonClose"/>
         </LinearLayout>
 
         <LinearLayout
