--- a/android-app/app/src/main/res/layout/activity_change_password.xml
+++ b/android-app/app/src/main/res/layout/activity_change_password.xml
@@ -53,7 +53,7 @@
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:ems="10"
-            android:id="@+id/textFieldPassword"
+            android:id="@+id/editTextPassword"
             android:hint="Password" />
     </LinearLayout>
 
@@ -68,7 +68,7 @@
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:ems="10"
-            android:id="@+id/textFieldPassword2"
+            android:id="@+id/editTextConfirmPassword"
             android:hint="Confirm password" />
     </LinearLayout>
 
