--- a/android-app/app/src/main/res/layout/activity_leaderboard.xml
+++ b/android-app/app/src/main/res/layout/activity_leaderboard.xml
@@ -3,22 +3,28 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/leaderboard list" />
+
     <EditText
         android:layout_width="260dp"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
         android:text="1. User name"
         android:ems="10"
-        android:id="@+id/editText2"
+        android:id="@+id/userLead"
         android:layout_marginLeft="80dp"
         android:layout_marginTop="30dp" />
+
     <EditText
         android:layout_width="260dp"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
         android:text="2. User name"
         android:ems="10"
-        android:id="@+id/editText2"
+        android:id="@+id/userLead"
         android:layout_marginLeft="80dp" />
     <EditText
         android:layout_width="260dp"
@@ -26,7 +32,7 @@
         android:inputType="textPersonName"
         android:text="3. User name"
         android:ems="10"
-        android:id="@+id/editText2"
+        android:id="@+id/userLead"
         android:layout_marginLeft="80dp" />
     <EditText
         android:layout_width="260dp"
@@ -34,7 +40,7 @@
         android:inputType="textPersonName"
         android:text="4. User name"
         android:ems="10"
-        android:id="@+id/editText2"
+        android:id="@+id/userLead"
         android:layout_marginLeft="80dp" />
 
 
