--- a/android-app/app/src/main/res/layout/activity_picture_post.xml
+++ b/android-app/app/src/main/res/layout/activity_picture_post.xml
@@ -10,33 +10,15 @@
         android:weightSum="1">
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="0px"
-            android:gravity="center_vertical"
-            android:layout_weight="0.1"
-            android:weightSum="1">
-
-            <TextView
-                android:text="Author: [insert name here]"
-                android:textColor="@color/colorBlack"
-                android:textSize="20dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:id="@+id/textView4"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0px"
-            android:layout_weight="0.6"
+            android:layout_weight="0.75"
             android:gravity="center">
 
             <LinearLayout
                 android:orientation="vertical"
-                android:layout_width="300dp"
-                android:layout_height="300dp"
+                android:layout_width="350dp"
+                android:layout_height="350dp"
                 android:layout_margin="5dp"
                 android:gravity="center"
                 android:background="@drawable/my_popup_bg">
@@ -53,11 +35,11 @@
             android:orientation="vertical"
             android:layout_width="wrap_content"
             android:layout_height="0px"
-            android:layout_weight="0.2"
+            android:layout_weight="0.15"
             android:weightSum="2">
 
             <TextView
-                android:text="Available points: 10"
+                android:text="Picture taken at time: 6:00"
                 android:textColor="@color/colorBlack"
                 android:textSize="20dp"
                 android:layout_width="match_parent"
@@ -67,7 +49,7 @@
                 android:layout_weight="1"/>
 
             <TextView
-                android:text="Remaining time: 3:48:30"
+                android:text="Points worth: 10"
                 android:textColor="@color/colorBlack"
                 android:textSize="20dp"
                 android:layout_width="match_parent"
@@ -85,12 +67,22 @@
             android:layout_weight="0.1">
 
             <Button
-                android:text="Guess location"
+                android:text="Cancel"
                 android:textColor="@color/colorWhite"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/my_button_bg"
-                android:layout_margin="5dp"/>
+                android:background="@drawable/my_cancel_button_bg"
+                android:layout_margin="5dp"
+                android:layout_weight="0.5"/>
+
+            <Button
+                android:text="post"
+                android:textColor="@color/colorWhite"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/my_confirm_button_bg"
+                android:layout_margin="5dp"
+                android:layout_weight="0.5"/>
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
