--- a/android-app/app/src/main/res/layout/activity_inbox_item.xml
+++ b/android-app/app/src/main/res/layout/activity_inbox_item.xml
@@ -54,14 +54,24 @@
             android:layout_width="wrap_content"
             android:layout_height="0px"
             android:layout_weight="0.2"
-            android:weightSum="2">
+            android:weightSum="3">
 
             <TextView
                 android:text="Available points: 10"
                 android:textColor="@color/colorBlack"
                 android:textSize="20dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0px"
+                android:gravity="center_vertical"
+                android:layout_margin="5dp"
+                android:layout_weight="1"/>
+
+            <TextView
+                android:text="Picture taken at yesterday 21:48"
+                android:layout_width="match_parent"
+                android:layout_height="0px"
+                android:textSize="20dp"
+                android:textColor="@color/colorBlack"
                 android:gravity="center_vertical"
                 android:layout_margin="5dp"
                 android:layout_weight="1"/>
@@ -71,7 +81,7 @@
                 android:textColor="@color/colorBlack"
                 android:textSize="20dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0px"
                 android:gravity="center_vertical"
                 android:layout_margin="5dp"
                 android:layout_weight="1"/>
