Update of the app
- Added PostPictureActivity and LeaderboardActivity
- Removed underscores in strings and replaced them by capital letters
- Changed android widget names to TV, ET, IM, etc followed by a name
- Added some extra methods for the InboxActivity

--- a/android-app/app/src/main/res/layout/activity_forgot_password.xml
+++ b/android-app/app/src/main/res/layout/activity_forgot_password.xml
@@ -35,7 +35,7 @@
         android:layout_margin="5dp">
 
         <TextView
-            android:text="@string/code_info"
+            android:text="@string/codeInfo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/textViewLogin"
