--- a/android-app/app/src/main/res/layout/activity_popup_incorrect.xml
+++ b/android-app/app/src/main/res/layout/activity_popup_incorrect.xml
@@ -38,7 +38,7 @@
             android:gravity="center">
 
             <TextView
-                android:text="@string/guess_incorrect"
+                android:text="@string/guessIncorrect"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
