--- a/android-app/app/src/main/res/layout/activity_gps_warning.xml
+++ b/android-app/app/src/main/res/layout/activity_gps_warning.xml
@@ -38,7 +38,7 @@
             android:gravity="center">
 
             <TextView
-                android:text="@string/gps_warning"
+                android:text="@string/gpsWarning"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
