--- a/android-app/app/src/main/res/layout/activity_popup_correct.xml
+++ b/android-app/app/src/main/res/layout/activity_popup_correct.xml
@@ -38,7 +38,7 @@
             android:gravity="center">
 
             <TextView
-                android:text="@string/guess_correct"
+                android:text="@string/guessCorrect"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
@@ -47,7 +47,7 @@
                 android:id="@+id/textView2"/>
 
             <TextView
-                android:text="@string/guess_correct_points"
+                android:text="@string/guessCorrectPoints"
                 android:layout_marginTop="40dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
