--- a/android-app/app/src/main/res/layout/activity_popup_password_changed.xml
+++ b/android-app/app/src/main/res/layout/activity_popup_password_changed.xml
@@ -40,7 +40,7 @@
             android:gravity="center">
 
             <TextView
-                android:text="@string/password_changed"
+                android:text="@string/passwordChanged"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
