Have done a lot (see desciption)
- Made a start to the actionbar (not finished)
- Created two adapters to be used for the feed in the inbox and the
leaderboard
- Renamed some variables to be less error-prone
- Removed all onClick from xml files and replaced them by
onClickListeners in the activities
- Added some pictures in multiple resolutions for the action bar
- Created an inbox item file to be listed in the feed (not finished)
- Added some TODO's to the xml files

--- a/android-app/app/src/main/res/layout/activity_change_password.xml
+++ b/android-app/app/src/main/res/layout/activity_change_password.xml
@@ -23,9 +23,9 @@
             android:text="Change password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:id="@+id/textViewChangePassword"
-            android:textColor="@color/colorBlack"/>
+            android:textColor="@color/colorBlack" />
     </LinearLayout>
 
     <LinearLayout
@@ -35,11 +35,11 @@
         android:layout_margin="5dp">
 
         <TextView
-            android:text="To change your password, please fill in a new password in the boxes below."
+            android:text="@string/changePasswordInfo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/textViewChangePasswordInfo"
-            android:textColor="@color/colorBlack"/>
+            android:textColor="@color/colorBlack" />
     </LinearLayout>
 
     <LinearLayout
@@ -53,7 +53,7 @@
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:ems="10"
-            android:id="@+id/editTextPassword"
+            android:id="@+id/editTextChangePasswordPassword"
             android:hint="Password" />
     </LinearLayout>
 
@@ -68,7 +68,7 @@
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:ems="10"
-            android:id="@+id/editTextConfirmPassword"
+            android:id="@+id/editTextChangePasswordVerifyPassword"
             android:hint="Confirm password" />
     </LinearLayout>
 
@@ -82,7 +82,6 @@
             android:text="Next"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/buttonNext"
-            android:onClick="next"/>
+            android:id="@+id/buttonChangePasswordNext"/>
     </LinearLayout>
 </LinearLayout>
