--- a/android-app/app/src/main/res/layout/activity_forgot_password.xml
+++ b/android-app/app/src/main/res/layout/activity_forgot_password.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_init"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -14,75 +14,76 @@
 
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp">
+        android:layout_margin="5dp"
+        android:orientation="vertical">
 
         <TextView
-            android:text="Retrieving lost password"
+            android:id="@+id/textViewForgotPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20dp"
-            android:id="@+id/textViewRetrievePassword"
-            android:textColor="@color/colorBlack"/>
+            android:text="Resetting lost password"
+            android:textColor="@color/colorBlack"
+            android:textSize="20sp" />
     </LinearLayout>
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp">
+        android:layout_margin="5dp"
+        android:orientation="vertical">
 
         <TextView
+            android:id="@+id/textViewForgotPasswordInfo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:text="@string/codeInfo"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/textViewLogin"
-            android:textColor="@color/colorBlack"/>
+            android:textColor="@color/colorBlack" />
     </LinearLayout>
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp">
+        android:layout_margin="5dp"
+        android:orientation="vertical">
 
         <EditText
+            android:id="@+id/editTextForgotPasswordCode"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:hint="Fill in code"
             android:ems="10"
-            android:id="@+id/editTextCode" />
+            android:hint="Fill in code"
+            android:inputType="textPersonName" />
     </LinearLayout>
 
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp">
+        android:layout_margin="5dp"
+        android:orientation="vertical">
 
         <Button
-            android:text="Next"
+            android:id="@+id/buttonForgotPasswordNext"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/buttonNext"
-            android:onClick="next"/>
+            android:onClick="confirmCode"
+            android:text="Next" />
     </LinearLayout>
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp">
+        android:layout_margin="5dp"
+        android:orientation="horizontal">
 
         <TextView
-            android:text="Did not receive a code?"
-            android:textColor="@color/colorBlue"
+            android:id="@+id/textViewForgotPasswordResendCode"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textViewResendCode"/>
+            android:onClick="resendCode"
+            android:text="Did not receive a code?"
+            android:textColor="@color/colorBlue" />
     </LinearLayout>
 </LinearLayout>
