--- a/android-app/app/src/main/res/layout/activity_inbox_item.xml
+++ b/android-app/app/src/main/res/layout/activity_inbox_item.xml
@@ -1,30 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         android:weightSum="1">
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="0px"
-            android:gravity="center_vertical"
             android:layout_weight="0.1"
+            android:gravity="center_vertical"
+            android:orientation="vertical"
             android:weightSum="1">
 
             <TextView
-                android:text="Author: [insert name here]"
-                android:textColor="@color/colorBlack"
-                android:textSize="20dp"
+                android:id="@+id/textView4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
-                android:id="@+id/textView4"/>
+                android:text="Author: [insert name here]"
+                android:textColor="@color/colorBlack"
+                android:textSize="20dp" />
         </LinearLayout>
 
         <LinearLayout
@@ -34,73 +35,74 @@
             android:gravity="center">
 
             <LinearLayout
-                android:orientation="vertical"
                 android:layout_width="300dp"
                 android:layout_height="300dp"
                 android:layout_margin="5dp"
+                android:background="@drawable/my_popup_bg"
                 android:gravity="center"
-                android:background="@drawable/my_popup_bg">
+                android:orientation="vertical">
 
                 <TextView
-                    android:text="This is a picture"
-                    android:textColor="@color/colorWhite"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:text="This is a picture"
+                    android:textColor="@color/colorWhite" />
             </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="wrap_content"
             android:layout_height="0px"
             android:layout_weight="0.2"
+            android:orientation="vertical"
             android:weightSum="3">
 
             <TextView
+                android:layout_width="match_parent"
+                android:layout_height="0px"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
                 android:text="Available points: 10"
                 android:textColor="@color/colorBlack"
-                android:textSize="20dp"
-                android:layout_width="match_parent"
-                android:layout_height="0px"
-                android:gravity="center_vertical"
-                android:layout_margin="5dp"
-                android:layout_weight="1"/>
+                android:textSize="20dp" />
 
             <TextView
+                android:layout_width="match_parent"
+                android:layout_height="0px"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
                 android:text="Picture taken at yesterday 21:48"
-                android:layout_width="match_parent"
-                android:layout_height="0px"
-                android:textSize="20dp"
                 android:textColor="@color/colorBlack"
-                android:gravity="center_vertical"
-                android:layout_margin="5dp"
-                android:layout_weight="1"/>
+                android:textSize="20dp" />
 
             <TextView
+                android:layout_width="match_parent"
+                android:layout_height="0px"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
                 android:text="Remaining time: 3:48:30"
                 android:textColor="@color/colorBlack"
-                android:textSize="20dp"
-                android:layout_width="match_parent"
-                android:layout_height="0px"
-                android:gravity="center_vertical"
-                android:layout_margin="5dp"
-                android:layout_weight="1"/>
+                android:textSize="20dp" />
         </LinearLayout>
 
         <LinearLayout
-            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="0px"
-            android:weightSum="1"
-            android:layout_weight="0.1">
+            android:layout_weight="0.1"
+            android:orientation="horizontal"
+            android:weightSum="1">
 
             <Button
-                android:text="Guess location"
-                android:textColor="@color/colorWhite"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_margin="5dp"
                 android:background="@drawable/my_button_bg"
-                android:layout_margin="5dp"/>
+                android:onClick="guessLocation"
+                android:text="Guess location"
+                android:textColor="@color/colorWhite" />
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
