--- a/android-app/app/src/main/res/layout/activity_popup_correct.xml
+++ b/android-app/app/src/main/res/layout/activity_popup_correct.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <!-- TODO: create a new pop-up and/or delete this -->
 
     <LinearLayout
         android:orientation="vertical"
@@ -27,7 +30,7 @@
                 android:scaleType="centerCrop"
                 android:background="@color/colorTransparent"
                 app:srcCompat="@drawable/arrow_back"
-                android:id="@+id/imageButton"/>
+                android:id="@+id/imageButton" />
         </LinearLayout>
 
         <LinearLayout
@@ -44,7 +47,7 @@
                 android:gravity="center"
                 android:textSize="30dp"
                 android:textColor="@color/colorWhite"
-                android:id="@+id/textView2"/>
+                android:id="@+id/textView2" />
 
             <TextView
                 android:text="@string/guessCorrectPoints"
@@ -54,7 +57,7 @@
                 android:gravity="center"
                 android:textSize="30dp"
                 android:textColor="@color/colorWhite"
-                android:id="@+id/textView3"/>
+                android:id="@+id/textView3" />
         </LinearLayout>
 
     </LinearLayout>
