--- a/android-app/app/src/main/res/layout/activity_popup_incorrect.xml
+++ b/android-app/app/src/main/res/layout/activity_popup_incorrect.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <!-- TODO: create a new pop-up and/or delete this -->
 
     <LinearLayout
         android:orientation="vertical"
