--- a/android-app/app/src/main/res/layout/activity_popup_password_changed.xml
+++ b/android-app/app/src/main/res/layout/activity_popup_password_changed.xml
@@ -2,8 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/popupLayout"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <!-- TODO: create a new pop-up and/or delete this -->
 
     <LinearLayout
         android:orientation="vertical"
@@ -29,7 +32,7 @@
                 android:scaleType="centerCrop"
                 android:background="@color/colorTransparent"
                 app:srcCompat="@drawable/arrow_back"
-                android:id="@+id/imageButtonClose"/>
+                android:id="@+id/imageButtonClose" />
         </LinearLayout>
 
         <LinearLayout
@@ -46,7 +49,7 @@
                 android:gravity="center"
                 android:textSize="30dp"
                 android:textColor="@color/colorWhite"
-                android:id="@+id/textView2"/>
+                android:id="@+id/textView2" />
 
         </LinearLayout>
     </LinearLayout>
